--- a/common.css
+++ b/common.css
@@ -27,26 +27,33 @@ pre {
 
 h1 {
     font-size: 48px;
+    margin: 2rem auto;
 }
 
 h2 {
     font-size: 42px;
+    margin: 1.75rem auto;
 }
 
 h3 {
     font-size: 38px;
+    margin: 1.33rem auto;
 }
 
 h4 {
     font-size: 32px;
+    margin: 1rem auto;
 }
 
 h5 {
     font-size: 28px;
+    margin: 0.83rem auto;
 }
 
 h6 {
     font-size: 22px;
+    margin: 0.66rem auto;
+    
 }
 
 nav.fragment-link ul {
@@ -150,7 +157,7 @@ table {
 }
 
 table.dynamic-layout {
-    table-layout: auto;
+    table-layout: auto !important;
 }
 
 table tr>td,
